2012-08-15 John Wu <John dot Wu at ACM dot org>
	* src/util.h, src/util.cpp: add a new variant of readString that
	directly works with the incoming string

2012-08-14 John Wu <John dot Wu at ACM dot org>
	* tests/jrf.cpp: quote the strings containing spaces in js (which
	uses spaces as separator for keywords), mark ' ' as delimiter
	explicitly in the index specification to avoid the default
	delimiter handling
	* tests/scripts/jrf-check.pl: use operator CONTAINS instead of
	borrowing the operator = in searching for keywords within text
	fields

2012-08-13 John Wu <John dot Wu at ACM dot org>
	* src/category.cpp: replace all logMessage cal with LOGGER
	* src/parti.cpp: call cleaner and purgeIndexFiles in purgeInactive
	* src/part.cpp: add call to unload index before purge index files
	to addres the segmentation fault with purge inactive data reported
	by Greg Barker

2012-08-10 John Wu <John dot Wu at ACM dot org>
	* src/util.cpp: util::read needs to stop if UnixRead returns 0
	* src/index.cpp: change the procedure to building range encoding
	and interval encoding from the equality encoding to make sure more
	than 2 bins are present before invoking the conversion procedure,
	to avoid the conversion procedure from throwing exception due to
	too few bit vectors

2012-08-09 John Wu <John dot Wu at ACM dot org>
	* src/bord.cpp, src/bord.h: add selectOpaques to
	ibis::bord::column
	* src/column.cpp: update the copy construct to copy mask_ and
	m_sorted
	* src/category.cpp: change fillIndex to make use of .int file
	before attempting to reading the raw strings
	* src/util.h, src/util.cpp: add util::write as a wrapper over
	UnixWrite to get around chunking of writing (an issue raised by
	Matt Bomhoff, similar to that raised by Rock Wong on reading)
	* src/i*.cpp: update all write64 to use ibis::util::write instead
	of UnixWrite for writing larger arrays

2012-08-08 John Wu <John dot Wu at ACM dot org>
	* src/filter.cpp: compose the long version of the mesg so that the